<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.fancyvvz.hci.dup.MainActivity" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <TextView
            android:id="@+id/textViewText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/assistent"
            android:textAppearance="?android:attr/textAppearanceMedium" />
        
        <Button
            android:id="@+id/buttonImport"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/buttonNewLV"
            android:layout_centerHorizontal="true"
            android:background="@android:color/black"
            android:text="@string/import_csv"
            android:textColor="@android:color/white" />
        
        <Button
            android:id="@+id/buttonNewLV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/textViewText"
            android:layout_centerHorizontal="true"
            android:background="@android:color/black"
            android:text="@string/new_LV"
            android:textColor="@android:color/white" />

    </RelativeLayout>

    <ViewFlipper
        android:id="@+id/viewflipper"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" >
        
    </ViewFlipper>

</RelativeLayout>