<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.fancyvvz.hci.dup.MainActivity" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <TextView
            android:id="@+id/textViewText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/import_csv"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <Button
            android:id="@+id/buttonDownText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:background="@android:color/black"
            android:drawableLeft="@android:drawable/btn_plus"
            android:gravity="center_vertical|center_horizontal" />

        <Button
            android:id="@+id/buttonH"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:background="@android:color/black"
            android:drawableBottom="@android:drawable/btn_minus"
            android:gravity="center_vertical|center_horizontal" />

        <Button
            android:id="@+id/buttonPaste"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/editTextCSV"
            android:background="@android:color/black"
            android:text="@string/paste"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/ButtonFileExplorer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/buttonH"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="84dp"
            android:background="@android:color/black"
            android:text="@string/fileExplorer"
            android:textColor="@android:color/white" />

        <EditText
            android:id="@+id/editTextCSV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/textViewText"
            android:layout_marginTop="96dp"
            android:ems="10"
            android:inputType="textMultiLine" >

            <requestFocus />
        </EditText>

        <TextView
            android:id="@+id/textInfoPaste"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/editTextCSV"
            android:layout_alignParentLeft="true"
            android:layout_marginBottom="54dp"
            android:text="@string/infoPaste"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:id="@+id/textInfoExplorer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/ButtonFileExplorer"
            android:layout_alignParentLeft="true"
            android:layout_marginBottom="16dp"
            android:text="@string/infoExplorer"
            android:textAppearance="?android:attr/textAppearanceSmall" />

    </RelativeLayout>

</RelativeLayout>